--- a/backend/Api/Api.csproj
+++ b/backend/Api/Api.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\QuantumLogic\QuantumLogic.csproj" />
-    <PackageReference Include="Microsoft.Quantum.Sdk" Version="0.28.302812" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-  </ItemGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\QuantumLogic\QuantumLogic.csproj" />
+        <PackageReference Include="Microsoft.Quantum.Sdk"
+                          Version="0.28.302812" />
+        <PackageReference Include="Swashbuckle.AspNetCore"
+                          Version="6.5.0" />
+    </ItemGroup>
 </Project>
