--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,8 @@
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
-		"axios": "^1.9.0"
+		"axios": "^1.9.0",
+		"quantum-tensors": "^0.4.15",
+		"svelte-dnd-action": "^0.9.61"
 	}
 }
