--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
+		"@iconify/svelte": "^5.0.0",
 		"@sveltejs/adapter-vercel": "^5.7.2",
 		"@tailwindcss/postcss": "^4.1.7",
 		"axios": "^1.9.0",
