--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,6 @@
 		"@tailwindcss/postcss": "^4.1.7",
 		"@types/lodash-es": "^4.17.12",
 		"axios": "^1.9.0",
-		"lodash-es": "^4.17.21",
-		"svelte-dnd-action": "^0.9.61"
+		"lodash-es": "^4.17.21"
 	}
 }
